# pkgs

./: .editorconfig  .gitattributes  .gitignore  .yamlfmt  Cargo.toml  LICENSE  README.md  biome.json  default.nix  flake.nix  justfile  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/actions/setup-nix/: action.yml
.github/actions/update-packages/: action.yml
.github/workflows/: build-packages.yaml  python-checks.yaml  update-pkgs.yaml
pkgs/: default.nix  update.sh
pkgs/by-name/ag/agent-statusline/: Cargo.toml  package.nix  rustfmt.toml  update.sh
pkgs/by-name/ag/agent-statusline-pi/: biome.json  extension.ts  index.ts  package.json  package.nix  update.sh
pkgs/by-name/ca/catppuccin-system-theme-pi/: extension.ts  index.ts  package.json  package.nix  update.sh
pkgs/by-name/cl/claude-code/: manifest.json  package-lock.json  package.nix  source.json  update.sh
pkgs/by-name/cl/claude-statusline/: Cargo.toml  package.nix
pkgs/by-name/cl/claude-statusline-pi/: extension.ts  package.nix
pkgs/by-name/cl/cline-ai/: package-lock.json  package.nix  source.json  update.sh  webview-package-lock.json
pkgs/by-name/co/codex/: 0001-add-external-tui-status-line-command-support.patch  0002-shift-empty-placeholder-off-cursor-cell.patch  0002-trust-projects-by-default.patch  0003-refresh-terminal-palette-while-focused.patch  0003-shift-empty-placeholder-off-cursor-cell.patch  0004-add-richer-status-line-command-telemetry.patch  0005-Fix-status-line-cached-input-token-payload.patch  0005-refresh-terminal-palette-while-focused.patch  package.nix  source.json  sources.json  update.sh
pkgs/by-name/co/codex-acp/: package.nix
pkgs/by-name/gh/ghidra-mcp-bridge/: package.nix
pkgs/by-name/gh/ghidra-mcp-headless-server/: package.nix  source.json  update.sh
pkgs/top-level/: by-name-overlay.nix  default.nix
scripts/: _common.py  changed-packages.py  gen-pkg-table.py  status.py  update.py
(+168 files in other folders)
